# JPEG_4_HLS

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/DCT2d/: DCT2d.cpp  DCT2d.h
src/DataSink/: DataSink.cpp  DataSink.h
src/DataSource/: CBitmap.cpp  CBitmap.h  CImage.cpp  CImage.h  CLigne.cpp  CLigne.h  CPixel.cpp  CPixel.h  DataSource.cpp  DataSource.h
src/DataSource2/: DataSource.cpp  DataSource.h
src/Encoder/: Encoder.h  HardEncoder.cpp  HardEncoder.h  uart_wrapper.cpp  uart_wrapper.h
src/Quantizer/: Quantizer.cpp  Quantizer.h
src/RGB2YUV/: RGB2YUV.cpp  RGB2YUV.h
src/Serializer/: Serializer.cpp  Serializer.h
src/ZigZag/: ZigZag.cpp  ZigZag.h
